# RidersPyTools

./: README.md  pyproject.toml  requirements.txt
Examples/: DiscordRPC.py  GetDataFromGame.py  GetSetValues.py  LapCheck.py  ReadInputs.py
src/RidersPyTools_KC/: Archetypes.py  Characters.py  Constants.py  DolphinProc.py  GameState.py  Gears.py  MapParser.py  Player.py  RidersObject.py  Structs.py  config.py
src/RidersPyTools_KC/include/: Constants.py  Controller.py  GearStats.py  GenericData.py  OffsetAttr.py
structText/: Controller.txt  ConvertCStruct.py  GearStats  PlayerStructText.txt
